# multidim-screening-plain

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  codeflow.gv  distrib_losses.html  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  sitemap.xml
classes/: index.html
docs/: classes.md  general_plots.md  index.md  main.md  plot_utils.md  setup.md  solver.md  specif.md  utils.md
general_plots/: index.html
multidim_screening_plain/: calibration.py  calibration_insurance_d1_m1_risk_deduc.py  calibration_insurance_d2_m2.py  check_insurance_d1_m1_risk_deduc.py  classes.py  compare_utilities.py  config.env  config_insurance_d1_m1_risk_deduc.env  config_insurance_d1_m1_risk_deduc_mix.env  config_insurance_d2_m1_copay.env  config_insurance_d2_m1_copay_mix.env  config_insurance_d2_m1_deduc.env  config_insurance_d2_m1_deduc_mix.env  config_insurance_d2_m2.env  config_insurance_d2_m2_mix.env  config_jointtax_d2_m2.env  config_mussarosen_d2_m2.env  general_plots.py  insurance_d1_m1_risk_deduc.py  insurance_d1_m1_risk_deduc_mix.py  insurance_d1_m1_risk_deduc_mix_values.py  insurance_d1_m1_risk_deduc_plots.py  insurance_d1_m1_risk_deduc_values.py  insurance_d2_m1_copay.py  insurance_d2_m1_copay_mix.py  insurance_d2_m1_copay_plots.py  insurance_d2_m1_copay_values.py  insurance_d2_m1_copay_values_mix.py  insurance_d2_m1_deduc.py  insurance_d2_m1_deduc_mix.py  insurance_d2_m1_deduc_plots.py  insurance_d2_m1_deduc_values.py  insurance_d2_m1_deduc_values_mix.py  insurance_d2_m2.py  insurance_d2_m2_mix.py  insurance_d2_m2_plots.py  insurance_d2_m2_values.py  insurance_d2_m2_values_mix.py  jointtax_d2_m2.py  jointtax_d2_m2_plots.py  (+10 more)
obsolete/: config_insurance_d2_m2.env  insurance_d1_m1_risk_deduc.py  insurance_d1_m1_risk_deduc_values.py  insurance_d2_m1_deduc_values.py  insurance_d2_m2.py  insurance_d2_m2_values.py
plot_utils/: index.html
search/: search_index.json
setup/: index.html
solver/: index.html
(+733 files in other folders)
