[tool.poetry]
name = "multidim_screening_plain"
version = "0.0.4"
description = "multidimensional screening without Numba"
authors = ["Bernard Salanie <fbsalanie@columbia.edu>"]
repository = "https://github.com/bsalanie/multidim-screening-plain"
documentation = "https://bsalanie.github.io/multidim-screening-plain/"
readme = "README.md"
packages = [
  {include = "multidim_screening_plain"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scipy = "1.10"
pandas = "^2.2.0"
altair = ">=5.0"
bs_python_utils = ">=0.6.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
mypy = ">=0.981"
pre-commit = ">=2.20.0"
icecream = ">=2.1.3"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.4.2"
mkdocs-material = ">=8.5.10"
mkdocstrings = {extras = ["python"], version = ">=0.21.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
preview = true

[tool.mypy]
files = ["multidim_screening_plain"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]


